--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "dev": "DEBUG=koa* node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "boardgame.io": "^0.50.2",
-    "express": "^4.18.2"
+    "boardgame.io": "^0.50.2"
+  },
+  "devDependencies": {
   }
 }
