Fix CSS errors with docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       - ./frontend/src:/code/src
       - ./frontend/img:/code/img
       - ./frontend/vite.config.ts:/code/vite.config.ts
+      - ./frontend/.postcssrc:/code/.postcssrc
       - ./frontend/tailwind.config.js:/code/tailwind.config.js
       - ./frontend/index.html:/code/index.html
       - ./frontend/package.json:/code/package.json
