Fix JS related errors

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3"
 services:
   backend:
     image: node:lts
+    # user: "node"
     # build:
     #   args:
     #     - NODE_ENV=development
@@ -24,6 +25,7 @@ services:
     #   host:
   frontend:
     image: node:lts
+    # user: "node"
     working_dir: /code
     # build:
       # context: frontend
