--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "DEBUG=koa* node server.js",
+    "dev": "DEBUG=koa* node -r esm server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +13,6 @@
     "boardgame.io": "^0.50.2"
   },
   "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
