--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - ./backend/package.json:/code/package.json
       - ./backend/server.js:/code/server.js
     command:
-      ['sh', '-cx', "npm i && npm run dev"]
+      ['sh', '-cx', "npm i && npm run build && npm run dev"]
     network_mode: host
     # networks:
     #   host:
