--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "DEBUG=koa* node server.js",
+    "dev": "DEBUG=koa* node out.js",
+    "build": "esbuild server.js --outfile=out.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "boardgame.io": "^0.50.2",
-    "vite": "^4.0.4"
+    "esbuild": "^0.17.5"
   },
   "devDependencies": {
   }
