--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,22 +8,19 @@ services:
     #   args:
     #     - NODE_ENV=development
     environment:
-      - NODE_ENV=development
-    # ports:
-    #   - "8080:8080"
-    #   - "8081:8181"
-    # ports:
-    #   - "8080:8080"
-    #   - "8081:8081"
+      - NODE_ENV=production
+    ports:
+      - "8080:8080"
+      - "8081:8081"
     volumes:
       - ./backend/src:/code/src
       - ./backend/package.json:/code/package.json
       - ./backend/server.js:/code/server.js
     command:
       ['sh', '-cx', "npm i && npm run build && npm run dev"]
-    network_mode: host
-    # networks:
-    #   host:
+    # network_mode: host
+    networks:
+      public:
   frontend:
     image: node:lts
     # user: "node"
@@ -31,8 +28,8 @@ services:
     # build:
       # context: frontend
       # target: development
-    # ports:
-    #   - "8127:8127"
+    ports:
+      - "8127:8127"
     volumes:
       - ./frontend/src:/code/src
       - ./frontend/img:/code/img
@@ -45,7 +42,7 @@ services:
       - backend
     command: ['sh', '-cx', "npm install && npm run build && npm run preview"]
     network_mode: host
-#     networks:
-#       host:
-# networks:
-#   host:
+    networks:
+      public:
+networks:
+  public:
