--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "source": "server.js",
   "main": "src/outserver.js",
   "scripts": {
-    "dev": "DEBUG=koa* node src/outserver.js",
+    "dev": "DEBUG=* node src/outserver.js",
     "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
