--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     #   args:
     #     - NODE_ENV=development
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
     ports:
       - "8080:8080"
       - "8081:8081"
