--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "boardgame.io": "^0.50.2",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
   }
